# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: github-actions-demo.yml
gendiff/: __init__.py  gendiff_engine.py  parser.py  stylish.py
gendiff/formats/: choice_format.py  json_formater.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  gendiff.py
tests/: test_gendiff_engine.py
tests/fixtures/: result_deep_test_json_formater.txt  result_test_json_formater.txt
