[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A difference calculator is a program that determines the difference between two data structures."
authors = ["BogdanBarylo <barylob@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]
classifiers = ["Programming Language :: Python :: 3.10",
               "License :: Freeware ",
               "Operating System :: OS Independent"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


